fix(context): préserver la cohérence score-composantes après fusion